small screen fixes
button should not overlap
timeline should stretch right

--- a/css-next/timeline.css
+++ b/css-next/timeline.css
@@ -17,7 +17,7 @@
 
 .timeline-date {
     padding: 20px;
-    width: 80px;
+    flex-basis: 80px;
 }
 
 
